# fde-starter-kit

./: .gitignore  README.md  pyproject.toml
src/fde_kit/: __init__.py  backends.py  cli.py  scaffold.py
templates/agent/: README.md  app.py
templates/chat/: README.md  app.py
templates/classify/: README.md  app.py
templates/extract/: README.md  app.py
templates/rag/: README.md  app.py  corpus.json
tests/: conftest.py  test_backends.py  test_scaffold.py  test_template_agent.py  test_template_chat.py  test_template_classify.py  test_template_extract.py  test_template_rag.py
